# MMY-3DModelViewer

./: .gitignore  BUILD.md  LICENSE  README.md  build-macos.command  build-macos.sh  build-windows.bat  build-windows.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: 规划方案.md  规划方案报告.html
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnimationPanel.vue  CanvasToolbarBottom.vue  CanvasToolbarTop.vue  MaterialEditor.vue  MeshList.vue  ModelInfo.vue  Toolbar.vue  UV2DViewer.vue
src/services/: fileService.ts
src/three/: ModelLoader.ts  SceneManager.ts
素材/.workbuddy/memory/: 2026-07-11.md  MEMORY.md
