[package]
name = "mmy-3d-model-viewer"
version = "0.1.0"
description = "MMY 3D 模型预览器 - 本地化轻量工具"
authors = ["MMY"]
edition = "2021"

[lib]
name = "mmy_3d_model_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
